--- a/velero/Chart.yaml
+++ b/velero/Chart.yaml
@@ -3,6 +3,6 @@ name: velero
 description: Velero Backup
 version: "1.0.0"
 dependencies:
-- name: vmware-tanzu/velero
+- name: velero
   version: "5.2.0"
   repository: "https://vmware-tanzu.github.io/helm-charts/"
