--- a/velero/values.yaml
+++ b/velero/values.yaml
@@ -13,7 +13,7 @@ velero:
         bucket: kubernetes
         credentials: 
           name: velero-secret
-          key: backup
+          key: cloud
         config:
           region: minion
           s3ForcePathStyle: true
